[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/auauquemia.tres" type="Resource" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=5]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )
enemy = ExtResource( 2 )
enemies = [ ExtResource( 3 ) ]

[node name="Player" parent="." groups=[
"Entities",
] instance=ExtResource( 4 )]
life = 20
maxCardsOnTurnEnd = 5
paralyzisAttackFailPercentage = 0.5
frozenActions = 2
burnDamage = 2
status = 1

[node name="Hand" parent="Player" instance=ExtResource( 5 )]
[connection signal="playerTurn" from="." to="Player" method="onTurnStart"]
[connection signal="turnEnded" from="Player" to="." method="onTurnEnded"]
